--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     // Used in FirebaseUIActivity.
     implementation 'com.firebaseui:firebase-ui-auth:7.1.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.firebase:firebase-firestore:22.1.2'
 
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
