--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".listofdialogs"></activity>
+        <activity android:name=".myprofile"></activity>
+        <activity android:name=".dialogue"></activity>
+        <activity android:name=".findnewdialogue" />
+        <activity android:name=".littleaboutyou" />
+        <activity android:name=".listofdialogs" />
         <activity android:name=".log_in" />
         <activity android:name=".MainActivity">
             <intent-filter>
